# odular

./: odular-dev.md  odular-minimize.md
odular-dualview/: CMakeLists.txt  README-ODULAR.md
odular-dualview/src/: dualviewwindow.cpp  dualviewwindow.h  main.cpp  pdfpageview.cpp  pdfpageview.h  xmpreader.cpp  xmpreader.h
